style updated to mobile view

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <section class="player first-game">
+      <section class="player">
         <h2>Game 1</h2>
         <h2 class= "current" id="guess-my-number">Guess my Number</h2>
         <div>
