uppercase to lowercase

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Game 2</h2>
         <h2  class= "current" id="roll-it">Roll it</h2>
         <div>
-          <p class="text">Here you need two players to play the game. Currently it is no available to play on multiple screens. </br>Enter your names on the first screen.</br></br>
+          <p class="text">Here you need two players to play the game. Currently it is no available to play on multiple screens. Enter your names on the first screen. If you open it in mobile you don't need to input the name</br></br>
             The game starts with player 1, you can roll the dice until you see the number 1.</br></br>
             Your score will be added to the previous sum.  when you get 1 the player will be switched. The player who scores 100 earlier is the winner.
           </p>
